--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
  <title>Excursion Travel</title>
 </head>
 <body>
-  <h1 class="title">Discover hidden places in the world around you</h1>
+  <h1>Discover hidden places in the world around you</h1>
     <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
-    <img src="./resources/img/hacksaw.jpeg">
-    <h3>Hacksaw Brushes</h3>
-    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
-  </div>
-<div id="frames">
-  <h2 class="red">Frames</h2>
-  <img src="./resources/img/frames.jpeg">
-  <h3>Art Frames (assorted)</h3>
-  <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00 / frame.</span></p>
-</div>
-<div id="paint">
-  <h2 class="blue">Paint</h2>
-  <img src="./resources/img/finnish.jpeg">
-  <h3>Clean Finnish Paint</h3>
-  <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="price">Starting at $5.00 / tube.</span></p>
-</div>
+    <br />
+    <video autoplay muted loop>
+      <source src="./resources/src/video/excursion.mp4" type="video/mp4">
+    </video>
+    <br />
+    <br />
+    <h2>Your Personal Travel Guide</h2>
+    <p>Excursion remembers place you like and recommends new points of interest around you.</p>
+    <br />
+    <img src=./resources/src/images/camp.jpg>
+    <br />
+    <img src=./resources/src/images/phone.png>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p class="copyright">© Excursion</p>
 </body>
 </html>
